--- a/GradeMate/Student/templates/Student/base.html
+++ b/GradeMate/Student/templates/Student/base.html
@@ -304,29 +304,29 @@
             <nav class="card p-4 flex justify-between items-center">
                 <div class="flex items-center space-x-3">
                  
-                    <a href="{% url 'Sdashboard' %}" class="flex items-center space-x-3">
+                    <a href="{% url 'Student:Sdashboard' %}" class="flex items-center space-x-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
                         <h1 class="text-xl font-bold text-gray-200">EduVal AI</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-3">
                  
-                    <a href="{% url 'assignment' %}" class="flex items-center space-x-3">
+                    <a href="{% url 'Student:assignments' %}" class="flex items-center space-x-3">
                         <h1 class="text-xl font-bold text-gray-200">Assignment</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-3">
                  
-                    <a href="{% url 'result' %}" class="flex items-center space-x-3">
+                    <a href="{% url 'Student:result' %}" class="flex items-center space-x-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
                         <h1 class="text-xl font-bold text-gray-200">Result</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-3">
                  
-                    <a href="{% url 'resultDetail' %}" class="flex items-center space-x-3">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                        <h1 class="text-xl font-bold text-gray-200">result_detail</h1>
+                    <a href="{% url 'Student:notifications' %}" class="flex items-center space-x-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
+                        <h1 class="text-xl font-bold text-gray-200">Notifications</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-4">
