--- a/GradeMate/Student/templates/Student/submission_success.html
+++ b/GradeMate/Student/templates/Student/submission_success.html
@@ -21,7 +21,7 @@
 
             <!-- Call to Action -->
             <div class="mt-8">
-                <a href="{% url 'student_dashboard' %}" class="btn-primary font-semibold py-2.5 px-6">
+                <a href="{% url 'Student:Sdashboard' %}" class="btn-primary font-semibold py-2.5 px-6">
                     Return to Dashboard
                 </a>
             </div>
