--- a/GradeMate/Student/templates/Student/result_detail.html
+++ b/GradeMate/Student/templates/Student/result_detail.html
@@ -7,7 +7,7 @@
     <div class="max-w-4xl mx-auto">
         <!-- Back to Results List Link -->
         <div class="mb-6">
-            <a href="{% url 'result' %}" class="text-blue-400 hover:text-blue-300 hover:underline transition-colors">
+            <a href="{% url 'Student:result' %}" class="text-blue-400 hover:text-blue-300 hover:underline transition-colors">
                 &larr; Back to All Results
             </a>
         </div>
