--- a/GradeMate/Student/templates/Student/result_list.html
+++ b/GradeMate/Student/templates/Student/result_list.html
@@ -8,7 +8,7 @@
         <!-- Back to Results List Link -->
         <div class="mb-6">
 
-            <a href="{% url 'result' %}" class="text-blue-400 hover:text-blue-300 hover:underline transition-colors">
+            <a href="{% url 'Student:result' %}" class="text-blue-400 hover:text-blue-300 hover:underline transition-colors">
                 &larr; Back to All Results
             </a>
         </div>
