--- a/GradeMate/Teacher/templates/Teacher/base.html
+++ b/GradeMate/Teacher/templates/Teacher/base.html
@@ -63,27 +63,27 @@
         <header class="p-4 sm:p-6 lg:p-8">
             <nav class="card p-4 flex justify-between items-center">
                 <div class="flex items-center space-x-3">
-                    <a href="{% url 'Tdashboard' %}" class="flex items-center space-x-3">
+                    <a href="{% url 'Teacher:Tdashboard' %}" class="flex items-center space-x-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
                         <h1 class="text-xl font-bold text-gray-200">EduVal AI</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-3">
-                    <a href="{% url 'TAssignment' %}" class="flex items-center space-x-3">
+                    <a href="{% url 'Teacher:TAssignment' %}" class="flex items-center space-x-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
                         <h1 class="text-xl font-bold text-gray-200">Assignment</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-3">
-                    <a href="{% url 'TAssignmentList' %}" class="flex items-center space-x-3">
+                    <a href="{% url 'Teacher:assignment_list' %}" class="flex items-center space-x-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                        <h1 class="text-xl font-bold text-gray-200">AssignemntList</h1>
+                        <h1 class="text-xl font-bold text-gray-200">Assignment List</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-3">
-                    <a href="{% url 'TSubmissionList' %}" class="flex items-center space-x-3">
+                    <a href="{% url 'Teacher:TSubmissionList' %}" class="flex items-center space-x-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-300"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                        <h1 class="text-xl font-bold text-gray-200">SubmissionList/h1>
+                        <h1 class="text-xl font-bold text-gray-200">Submission List</h1>
                     </a>
                 </div>
                 <div class="flex items-center space-x-4">
