--- a/GradeMate/Teacher/templates/Teacher/question_confirm_delete.html
+++ b/GradeMate/Teacher/templates/Teacher/question_confirm_delete.html
@@ -23,7 +23,7 @@
                 <button type="submit" class="btn-primary bg-red-600 hover:bg-red-700">
                     Yes, Delete
                 </button>
-                <a href="{% url 'question_list' %}" class="btn-secondary">
+                <a href="{% url 'Teacher:question_list' %}" class="btn-secondary">
                     Cancel
                 </a>
             </div>
@@ -31,4 +31,5 @@
     </div>
 </div>
 {% endblock %}
+
 
