--- a/GradeMate/Teacher/templates/Teacher/question_form.html
+++ b/GradeMate/Teacher/templates/Teacher/question_form.html
@@ -37,7 +37,7 @@
                 <button type="submit" class="btn-primary">
                     {% if object %}Update Question{% else %}Create Question{% endif %}
                 </button>
-                <a href="{% url 'question_list' %}" class="btn-secondary">
+                <a href="{% url 'Teacher:question_list' %}" class="btn-secondary">
                     Cancel
                 </a>
             </div>
@@ -45,4 +45,5 @@
     </div>
 </div>
 {% endblock %}
+
 
